qr sending to mail left

--- a/public/view/m-member/edit-members.ejs
+++ b/public/view/m-member/edit-members.ejs
@@ -565,10 +565,11 @@
                               <div class="col-xl-6">
                                 <label for="meeting_opening_balance" class="form-label">Meeting Opening Balance</label>
                                 <input
-                                  type="text"
+                                  type="number"
                                   class="form-control"
                                   id="meeting_opening_balance"
                                   name="meeting_opening_balance"
+                                  placeholder="Enter Meeting Opening Balance"
                                 />
                               </div>
 
