--- a/public/view/partials/member-sidebar.ejs
+++ b/public/view/partials/member-sidebar.ejs
@@ -323,6 +323,7 @@
     "/m/member-transactions": ".transaction-menu",
     "/m/member-allTransactions": ".transaction-menu",
     "/mtr/all-trainings": ".training-menu",
+    "/mtr/my-training": ".training-menu",
     "/macc/manage-memberAccolades": ".accolades-menu",
     "/macc/request-memberAccolades": ".accolades-menu",
   };
